--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Not The Right Number</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- SVG filters for chalkboard and chalk effects -->
