--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
         <!-- Chalkboard surface noise -->
         <filter id="chalkboard-noise" x="0%" y="0%" width="100%" height="100%">
-          <feTurbulence type="fractalNoise" baseFrequency="0.7" numOctaves="4" stitchTiles="stitch" result="noise"/>
-          <feColorMatrix type="saturate" values="0" result="mono"/>
-          <feComponentTransfer result="softNoise">
-            <feFuncA type="linear" slope="0.15" intercept="0"/>
+          <feTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="4" stitchTiles="stitch" seed="3" result="noise"/>
+          <feColorMatrix type="saturate" values="0" in="noise" result="mono"/>
+          <feComponentTransfer in="mono" result="softNoise">
+            <feFuncA type="linear" slope="0.04" intercept="0"/>
           </feComponentTransfer>
           <feBlend in="SourceGraphic" in2="softNoise" mode="overlay"/>
         </filter>
